improved server generation
