# openapi-server/src/api.go
@@ -15,12 +15,10 @@ import (
 	"os"
 )
 
-
-
 // DefaultApiRouter defines the required methods for binding the api requests to a responses for the DefaultApi
 // The DefaultApiRouter implementation should parse necessary information from the http request,
 // pass the data to a DefaultApiServicer to perform the required actions, then write the service results to the http response.
-type DefaultApiRouter interface { 
+type DefaultApiRouter interface {
 	Get3dMap(http.ResponseWriter, *http.Request)
 	GetChromatogramCount(http.ResponseWriter, *http.Request)
 	GetChromatogramData(http.ResponseWriter, *http.Request)
@@ -45,12 +43,11 @@ type DefaultApiRouter interface {
 	PostFile(http.ResponseWriter, *http.Request)
 }
 
-
 // DefaultApiServicer defines the api actions for the DefaultApi service
 // This interface intended to stay up to date with the openapi yaml used to generate it,
 // while the service implementation can be ignored with the .openapi-generator-ignore file
 // and updated with the logic required for the API.
-type DefaultApiServicer interface { 
+type DefaultApiServicer interface {
 	Get3dMap(context.Context, string) (ImplResponse, error)
 	GetChromatogramCount(context.Context, string) (ImplResponse, error)
 	GetChromatogramData(context.Context, string, int32) (ImplResponse, error)
@@ -72,5 +69,5 @@ type DefaultApiServicer interface {
 	GetScansData(context.Context, string) (ImplResponse, error)
 	GetSoftware(context.Context, string) (ImplResponse, error)
 	GetSource(context.Context, string) (ImplResponse, error)
-	PostFile(context.Context, *os.File) (ImplResponse, error)
+	PostFile(context.Context, string, *os.File) (ImplResponse, error)
 }
