# openapi-server/src/api_default_service.go
@@ -11,8 +11,8 @@ package mzserver
 
 import (
 	"context"
-	"net/http"
 	"errors"
+	"net/http"
 	"os"
 )
 
@@ -27,7 +27,7 @@ func NewDefaultApiService() DefaultApiServicer {
 	return &DefaultApiService{}
 }
 
-// Get3dMap - 
+// Get3dMap -
 func (s *DefaultApiService) Get3dMap(ctx context.Context, msDataId string) (ImplResponse, error) {
 	// TODO - update Get3dMap with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
@@ -38,7 +38,7 @@ func (s *DefaultApiService) Get3dMap(ctx context.Context, msDataId string) (Impl
 	return Response(http.StatusNotImplemented, nil), errors.New("Get3dMap method not implemented")
 }
 
-// GetChromatogramCount - 
+// GetChromatogramCount -
 func (s *DefaultApiService) GetChromatogramCount(ctx context.Context, msDataId string) (ImplResponse, error) {
 	// TODO - update GetChromatogramCount with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
@@ -49,7 +49,7 @@ func (s *DefaultApiService) GetChromatogramCount(ctx context.Context, msDataId s
 	return Response(http.StatusNotImplemented, nil), errors.New("GetChromatogramCount method not implemented")
 }
 
-// GetChromatogramData - 
+// GetChromatogramData -
 func (s *DefaultApiService) GetChromatogramData(ctx context.Context, msDataId string, chromatogramId int32) (ImplResponse, error) {
 	// TODO - update GetChromatogramData with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
@@ -60,7 +60,7 @@ func (s *DefaultApiService) GetChromatogramData(ctx context.Context, msDataId st
 	return Response(http.StatusNotImplemented, nil), errors.New("GetChromatogramData method not implemented")
 }
 
-// GetChromatogramHeader - 
+// GetChromatogramHeader -
 func (s *DefaultApiService) GetChromatogramHeader(ctx context.Context, msDataId string, chromatogramId int32) (ImplResponse, error) {
 	// TODO - update GetChromatogramHeader with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
@@ -71,7 +71,7 @@ func (s *DefaultApiService) GetChromatogramHeader(ctx context.Context, msDataId 
 	return Response(http.StatusNotImplemented, nil), errors.New("GetChromatogramHeader method not implemented")
 }
 
-// GetChromatograms - 
+// GetChromatograms -
 func (s *DefaultApiService) GetChromatograms(ctx context.Context, msDataId string) (ImplResponse, error) {
 	// TODO - update GetChromatograms with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
@@ -82,7 +82,7 @@ func (s *DefaultApiService) GetChromatograms(ctx context.Context, msDataId strin
 	return Response(http.StatusNotImplemented, nil), errors.New("GetChromatograms method not implemented")
 }
 
-// GetFileName - 
+// GetFileName -
 func (s *DefaultApiService) GetFileName(ctx context.Context, msDataId string) (ImplResponse, error) {
 	// TODO - update GetFileName with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
@@ -93,7 +93,7 @@ func (s *DefaultApiService) GetFileName(ctx context.Context, msDataId string) (I
 	return Response(http.StatusNotImplemented, nil), errors.New("GetFileName method not implemented")
 }
 
-// GetInstrumentAnalyzer - 
+// GetInstrumentAnalyzer -
 func (s *DefaultApiService) GetInstrumentAnalyzer(ctx context.Context, msDataId string) (ImplResponse, error) {
 	// TODO - update GetInstrumentAnalyzer with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
@@ -104,7 +104,7 @@ func (s *DefaultApiService) GetInstrumentAnalyzer(ctx context.Context, msDataId 
 	return Response(http.StatusNotImplemented, nil), errors.New("GetInstrumentAnalyzer method not implemented")
 }
 
-// GetInstrumentData - 
+// GetInstrumentData -
 func (s *DefaultApiService) GetInstrumentData(ctx context.Context, msDataId string) (ImplResponse, error) {
 	// TODO - update GetInstrumentData with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
@@ -115,7 +115,7 @@ func (s *DefaultApiService) GetInstrumentData(ctx context.Context, msDataId stri
 	return Response(http.StatusNotImplemented, nil), errors.New("GetInstrumentData method not implemented")
 }
 
-// GetInstrumentDetector - 
+// GetInstrumentDetector -
 func (s *DefaultApiService) GetInstrumentDetector(ctx context.Context, msDataId string) (ImplResponse, error) {
 	// TODO - update GetInstrumentDetector with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
@@ -126,7 +126,7 @@ func (s *DefaultApiService) GetInstrumentDetector(ctx context.Context, msDataId 
 	return Response(http.StatusNotImplemented, nil), errors.New("GetInstrumentDetector method not implemented")
 }
 
-// GetInstrumentManufacturer - 
+// GetInstrumentManufacturer -
 func (s *DefaultApiService) GetInstrumentManufacturer(ctx context.Context, msDataId string) (ImplResponse, error) {
 	// TODO - update GetInstrumentManufacturer with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
@@ -137,7 +137,7 @@ func (s *DefaultApiService) GetInstrumentManufacturer(ctx context.Context, msDat
 	return Response(http.StatusNotImplemented, nil), errors.New("GetInstrumentManufacturer method not implemented")
 }
 
-// GetInstrumentModel - 
+// GetInstrumentModel -
 func (s *DefaultApiService) GetInstrumentModel(ctx context.Context, msDataId string) (ImplResponse, error) {
 	// TODO - update GetInstrumentModel with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
@@ -148,7 +148,7 @@ func (s *DefaultApiService) GetInstrumentModel(ctx context.Context, msDataId str
 	return Response(http.StatusNotImplemented, nil), errors.New("GetInstrumentModel method not implemented")
 }
 
-// GetIonisationMethod - 
+// GetIonisationMethod -
 func (s *DefaultApiService) GetIonisationMethod(ctx context.Context, msDataId string) (ImplResponse, error) {
 	// TODO - update GetIonisationMethod with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
@@ -159,7 +159,7 @@ func (s *DefaultApiService) GetIonisationMethod(ctx context.Context, msDataId st
 	return Response(http.StatusNotImplemented, nil), errors.New("GetIonisationMethod method not implemented")
 }
 
-// GetIsolationWindows - 
+// GetIsolationWindows -
 func (s *DefaultApiService) GetIsolationWindows(ctx context.Context, msDataId string) (ImplResponse, error) {
 	// TODO - update GetIsolationWindows with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
@@ -170,7 +170,7 @@ func (s *DefaultApiService) GetIsolationWindows(ctx context.Context, msDataId st
 	return Response(http.StatusNotImplemented, nil), errors.New("GetIsolationWindows method not implemented")
 }
 
-// GetSampleData - 
+// GetSampleData -
 func (s *DefaultApiService) GetSampleData(ctx context.Context, msDataId string) (ImplResponse, error) {
 	// TODO - update GetSampleData with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
@@ -181,7 +181,7 @@ func (s *DefaultApiService) GetSampleData(ctx context.Context, msDataId string) 
 	return Response(http.StatusNotImplemented, nil), errors.New("GetSampleData method not implemented")
 }
 
-// GetScanCount - 
+// GetScanCount -
 func (s *DefaultApiService) GetScanCount(ctx context.Context, msDataId string) (ImplResponse, error) {
 	// TODO - update GetScanCount with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
@@ -192,7 +192,7 @@ func (s *DefaultApiService) GetScanCount(ctx context.Context, msDataId string) (
 	return Response(http.StatusNotImplemented, nil), errors.New("GetScanCount method not implemented")
 }
 
-// GetScanHeader - 
+// GetScanHeader -
 func (s *DefaultApiService) GetScanHeader(ctx context.Context, msDataId string) (ImplResponse, error) {
 	// TODO - update GetScanHeader with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
@@ -203,7 +203,7 @@ func (s *DefaultApiService) GetScanHeader(ctx context.Context, msDataId string) 
 	return Response(http.StatusNotImplemented, nil), errors.New("GetScanHeader method not implemented")
 }
 
-// GetScanPeakCount - 
+// GetScanPeakCount -
 func (s *DefaultApiService) GetScanPeakCount(ctx context.Context, msDataId string) (ImplResponse, error) {
 	// TODO - update GetScanPeakCount with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
@@ -214,7 +214,7 @@ func (s *DefaultApiService) GetScanPeakCount(ctx context.Context, msDataId strin
 	return Response(http.StatusNotImplemented, nil), errors.New("GetScanPeakCount method not implemented")
 }
 
-// GetScanPeaks - 
+// GetScanPeaks -
 func (s *DefaultApiService) GetScanPeaks(ctx context.Context, msDataId string) (ImplResponse, error) {
 	// TODO - update GetScanPeaks with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
@@ -225,7 +225,7 @@ func (s *DefaultApiService) GetScanPeaks(ctx context.Context, msDataId string) (
 	return Response(http.StatusNotImplemented, nil), errors.New("GetScanPeaks method not implemented")
 }
 
-// GetScansData - 
+// GetScansData -
 func (s *DefaultApiService) GetScansData(ctx context.Context, msDataId string) (ImplResponse, error) {
 	// TODO - update GetScansData with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
@@ -236,7 +236,7 @@ func (s *DefaultApiService) GetScansData(ctx context.Context, msDataId string) (
 	return Response(http.StatusNotImplemented, nil), errors.New("GetScansData method not implemented")
 }
 
-// GetSoftware - 
+// GetSoftware -
 func (s *DefaultApiService) GetSoftware(ctx context.Context, msDataId string) (ImplResponse, error) {
 	// TODO - update GetSoftware with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
@@ -247,7 +247,7 @@ func (s *DefaultApiService) GetSoftware(ctx context.Context, msDataId string) (I
 	return Response(http.StatusNotImplemented, nil), errors.New("GetSoftware method not implemented")
 }
 
-// GetSource - 
+// GetSource -
 func (s *DefaultApiService) GetSource(ctx context.Context, msDataId string) (ImplResponse, error) {
 	// TODO - update GetSource with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
@@ -258,13 +258,16 @@ func (s *DefaultApiService) GetSource(ctx context.Context, msDataId string) (Imp
 	return Response(http.StatusNotImplemented, nil), errors.New("GetSource method not implemented")
 }
 
-// PostFile - 
-func (s *DefaultApiService) PostFile(ctx context.Context, body *os.File) (ImplResponse, error) {
+// PostFile -
+func (s *DefaultApiService) PostFile(ctx context.Context, filename string, file *os.File) (ImplResponse, error) {
 	// TODO - update PostFile with the required logic for this service method.
 	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
 
 	//TODO: Uncomment the next line to return response Response(200, PostFile200Response{}) or use other options such as http.Ok ...
 	//return Response(200, PostFile200Response{}), nil
+
+	//TODO: Uncomment the next line to return response Response(400, ErrorMsg{}) or use other options such as http.Ok ...
+	//return Response(400, ErrorMsg{}), nil
 
 	return Response(http.StatusNotImplemented, nil), errors.New("PostFile method not implemented")
 }
