# openapi-server/src/model_error.go
@@ -1,0 +1,31 @@
+/*
+ * Title
+ *
+ * Title
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package mzserver
+
+type ModelError struct {
+	ErrorMsg string `json:"errorMsg,omitempty"`
+}
+
+// AssertModelErrorRequired checks if the required fields are not zero-ed
+func AssertModelErrorRequired(obj ModelError) error {
+	return nil
+}
+
+// AssertRecurseModelErrorRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of ModelError (e.g. [][]ModelError), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseModelErrorRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aModelError, ok := obj.(ModelError)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertModelErrorRequired(aModelError)
+	})
+}
