# openapi-server/src/model_error_msg.go
@@ -1,0 +1,31 @@
+/*
+ * Title
+ *
+ * Title
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package mzserver
+
+type ErrorMsg struct {
+	ErrorMsg string `json:"errorMsg,omitempty"`
+}
+
+// AssertErrorMsgRequired checks if the required fields are not zero-ed
+func AssertErrorMsgRequired(obj ErrorMsg) error {
+	return nil
+}
+
+// AssertRecurseErrorMsgRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of ErrorMsg (e.g. [][]ErrorMsg), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseErrorMsgRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aErrorMsg, ok := obj.(ErrorMsg)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertErrorMsgRequired(aErrorMsg)
+	})
+}
